--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,24 +38,15 @@ jobs:
       run: |
         git config --global user.name "riverallzero"
         git config --global user.email "riverallzero@naver.com"
-    - if: github.run_number == 1
+    - name: Verify Changed files
+      uses: tj-actions/verify-changed-files@v16
+      id: verify-changed-files
+      with:
+        files: |
+           *.txt
+    - name: Run step only when any of the above files change.
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
       run: |
-        git add last_no.txt
-        git commit -m "Create last_no.txt"
+        git add .
+        git commit -m "Commit updated"
         git push
-    - name: Check for changes
-      id: check_changes
-      run: |
-        if [ -n "$(git diff --name-only last_no.txt)" ]; then
-          echo "has_changes=true" >> $GITHUB_OUTPUT
-        fi
-    - name: Commit Update
-      run: |
-        echo steps.check_changes.outputs.has_changes=${{steps.check_changes.outputs.has_changes}}
-        if ${{steps.check_changes.outputs.has_changes}} = 'true'; then
-          git add last_no.txt
-          git commit -m "Updated last_no"
-          git push
-        else
-          echo "No changes detected."
-        fi
